referral program page styling and fix referral program link on mobile

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -136,6 +136,13 @@
   justify-content: center;
   align-items: flex-start;
   margin: 4px;
+  .clipboard-copier{
+    font-size: 11px;
+    // color: white;
+    border-radius: 3px;
+    padding: 2px 10px;
+    font-weight: bold;
+  }
 }
 .share-on-whatsapp-btn{
   font-size: 11px;
