--- a/app/assets/stylesheets/pages/_referral-program.scss
+++ b/app/assets/stylesheets/pages/_referral-program.scss
@@ -15,4 +15,5 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 4px;
 }
